sandbox/output
Patient.java:18: error: cannot find symbol
        if (!isOverlapped(clashingMedicines)) {
                          ^
  symbol:   variable clashingMedicines
  location: class Patient
Patient.java:21: error: cannot find symbol
        return calculateOverlappedDays(clashingMedicines);
                                       ^
  symbol:   variable clashingMedicines
  location: class Patient
2 errors
